# handler/history-handler.go
@@ -5,9 +5,12 @@ import (
 	"axion/model/entity"
 	"axion/model/request"
 	"log"
+	"strconv"
 
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
+	"github.com/signintech/gopdf"
+	"github.com/xuri/excelize/v2"
 )
 
 // @Summary Get All History
@@ -21,14 +24,14 @@ import (
 // @Router /history [get]
 // @Security ApiKeyAuth
 func HistoryHandlerGetAll(ctx *fiber.Ctx) error {
-	var Historys []entity.History
+	var Histories []entity.History
 
-	result := database.DB.Debug().Find(&Historys)
+	result := database.DB.Debug().Find(&Histories)
 	if result.Error != nil {
 		log.Println(result.Error)
 	}
 
-	return ctx.JSON(Historys)
+	return ctx.JSON(Histories)
 }
 
 // @Summary Get History By Id
@@ -187,4 +190,182 @@ func HistoryHandlerDelete(ctx *fiber.Ctx) error {
 	return ctx.JSON(fiber.Map{
 		"message": "History was deleted",
 	})
+}
+
+// @Summary Export History to Excel
+// @Description Export History to Excel
+// @Tags History
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 403
+// @Failure 404
+// @Router /history-export-excel [get]
+// @Security ApiKeyAuth
+func HistoryExportToExcel(c *fiber.Ctx) error {
+	var Histories []entity.History
+
+	result := database.DB.Debug().Find(&Histories)
+	if result.Error != nil {
+		log.Println(result.Error)
+	}
+
+	file := excelize.NewFile()
+	const sheet = "History"
+
+	index, err := file.NewSheet(sheet)
+	if err != nil {
+		return c.Status(500).JSON(fiber.Map{
+			"message": "failed to create sheet",
+		})
+	}
+
+	file.SetCellValue(sheet, "A1", "ID")
+	file.SetCellValue(sheet, "B1", "Log")
+	file.SetCellValue(sheet, "C1", "Created At")
+	file.SetCellValue(sheet, "D1", "Updated At")
+
+	style, err := file.NewStyle(&excelize.Style{
+		Font: &excelize.Font{
+			Bold: true,
+		},
+	})
+
+	if err != nil {
+		return c.Status(500).JSON(fiber.Map{
+			"message": "failed to create style",
+		})
+	}
+
+	file.SetCellStyle(sheet, "A1", "D1", style)
+
+	for i, History := range Histories {
+		i = i + 2
+		file.SetCellValue(sheet, "A"+strconv.Itoa(i), History.ID)
+		file.SetCellValue(sheet, "B"+strconv.Itoa(i), History.Log)
+		file.SetCellValue(sheet, "C"+strconv.Itoa(i), History.CreatedAt)
+		file.SetCellValue(sheet, "D"+strconv.Itoa(i), History.UpdatedAt)
+	}
+
+	file.SetColWidth(sheet, "A", "A", 10)
+	file.SetColWidth(sheet, "B", "B", 30)
+	file.SetColWidth(sheet, "C", "C", 30)
+	file.SetColWidth(sheet, "D", "D", 30)
+
+	file.SetActiveSheet(index)
+
+	c.Set("Content-Disposition", "attachment; filename=history-report.xlsx")
+	c.Set("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
+
+	errWrite := file.Write(c.Response().BodyWriter())
+	if errWrite != nil {
+		return errWrite
+	}
+	return nil
+}
+
+// @Summary Export History to PDF
+// @Description Export History to PDF
+// @Tags History
+// @Accept  json
+// @Produce  json
+// @Success 200
+// @Failure 400
+// @Failure 401
+// @Failure 403
+// @Failure 404
+// @Router /history-export-pdf [get]
+// @Security ApiKeyAuth
+func HistoryExportToPDF(c *fiber.Ctx) error {
+	var Histories []entity.History
+
+	result := database.DB.Debug().Find(&Histories)
+	if result.Error != nil {
+		log.Println(result.Error)
+	}
+
+	file := excelize.NewFile()
+	const sheet = "History"
+
+	index, err := file.NewSheet(sheet)
+	if err != nil {
+		return c.Status(500).JSON(fiber.Map{
+			"message": "failed to create sheet",
+		})
+	}
+
+	file.SetCellValue(sheet, "A1", "ID")
+	file.SetCellValue(sheet, "B1", "Log")
+
+	style, err := file.NewStyle(&excelize.Style{
+		Font: &excelize.Font{
+			Bold: true,
+		},
+	})
+
+	if err != nil {
+		return c.Status(500).JSON(fiber.Map{
+			"message": "failed to create style",
+		})
+	}
+
+	file.SetCellStyle(sheet, "A1", "B1", style)
+
+	for i, History := range Histories {
+		i = i + 2
+		file.SetCellValue(sheet, "A"+strconv.Itoa(i), History.ID)
+		file.SetCellValue(sheet, "B"+strconv.Itoa(i), History.Log)
+	}
+
+	file.SetColWidth(sheet, "A", "A", 10)
+	file.SetColWidth(sheet, "B", "B", 30)
+
+	file.SetActiveSheet(index)
+
+	pdf := gopdf.GoPdf{}
+	pdf.Start(gopdf.Config{PageSize: *gopdf.PageSizeA4})
+
+	errFont := pdf.AddTTFFont("poppins", "/home/codeyzx/Data/programming/go/axion-be/assets/fonts/Poppins-Medium.ttf")
+	if errFont != nil {
+		log.Println("failed to add font")
+	}
+	errFont = pdf.SetFont("poppins", "", 12)
+	if errFont != nil {
+		log.Println("failed to set font")
+	}
+
+	pdf.AddPage()
+
+	r, err := file.GetRows(sheet)
+	for row, rowCells := range r {
+		for _, cell := range rowCells {
+
+			err = pdf.Cell(nil, cell)
+			if err != nil {
+				log.Println(err)
+			}
+
+			pdf.SetX(pdf.GetX() + 50)
+		}
+
+		pdf.Br(30)
+		pdf.SetX(20)
+
+		if row%20 == 19 {
+			pdf.AddPage()
+			pdf.SetX(20)
+		}
+
+	}
+
+	c.Set("Content-Disposition", "attachment; filename=history-report.pdf")
+	c.Set("Content-Type", "application/pdf")
+	errWrite := pdf.Write(c.Response().BodyWriter())
+	if errWrite != nil {
+		return errWrite
+	}
+	return nil
+
 }
